cmake_minimum_required(VERSION 3.31)
project(C_Plus_Plus_Estudos)

set(CMAKE_CXX_STANDARD 23)

#add_subdirectory(1-Livros/1-C++-Programming-Language/Samples/Hello-World)
#add_subdirectory(1-Livros/2-Learn-C++/1-3-Introduction-To-Objects-And-Variables)
#add_subdirectory(1-Livros/2-Learn-C++/1-5-Introduction-iostream-cout-cin-add-end)
#add_subdirectory(1-Livros/2-Learn-C++/2-1-introduction-to-functions)
add_subdirectory(1-Livros/2-Learn-C++/8-13-introduction-to-random-number-generation)